--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,11 @@
-absl-py==2.1.0
-asgiref==3.7.2
-astunparse==1.6.3
-attrs==23.2.0
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cmake==3.29.6
-colorama==0.4.6
-comtypes==1.4.5
-contourpy==1.2.0
-cycler==0.12.1
-distlib==0.3.8
-Django==4.2.4
-dlib @ file:///C:/Users/RAHITHA%20T%20NAIR/Downloads/dlib-19.24.1-cp311-cp311-win_amd64.whl#sha256=6f1a5ee167975d7952b28e0ce4495f1d9a77644761cf5720fb66d7c6188ae496
-dm-tree==0.1.8
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-filelock==3.15.4
-Flask==3.0.0
-flatbuffers==23.5.26
-fonttools==4.47.0
-gast==0.5.4
-git-filter-repo==2.45.0
-google-auth==2.28.0
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.60.1
-h5py==3.10.0
-idna==3.6
-imageio==2.34.2
-imutils==0.5.4
-itsdangerous==2.1.2
-jax==0.4.28
-jaxlib==0.4.28
-Jinja2==3.1.2
-joblib==1.3.2
-keras==2.15.0
-kiwisolver==1.4.5
-lazy_loader==0.4
-libclang==16.0.6
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-mdurl==0.1.2
-mediapipe==0.10.14
-ml-dtypes==0.2.0
-mysql-connector-python==8.1.0
-namex==0.0.7
-networkx==3.3
-node==1.2.1
-numpy==1.26.2
-oauthlib==3.2.2
-odict==1.9.0
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
-packaging==23.2
-pandas==2.1.4
-Pillow==10.1.0
-pipenv==2024.0.1
-platformdirs==4.2.2
-playsound==1.3.0
-plumber==1.7
-protobuf==4.25.3
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.22
-pyglet==2.0.15
-Pygments==2.17.2
-pyparsing==3.1.1
-pypiwin32==223
-pypng==0.20220715.0
-PyQRCode==1.2.1
-python-dateutil==2.8.2
-pyttsx3==2.90
-pytz==2023.3.post1
-pywin32==306
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.7.0
-rsa==4.9
-scikit-image==0.24.0
-scikit-learn==1.3.2
-scipy==1.11.4
-seaborn==0.13.0
-six==1.16.0
-sounddevice==0.4.6
-sqlparse==0.4.4
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-threadpoolctl==3.2.0
-tifffile==2024.7.2
-typing_extensions==4.9.0
-tzdata==2023.3
-urllib3==2.2.0
-virtualenv==20.26.3
-Werkzeug==3.0.1
-wrapt==1.14.1
-zope.component==6.0
-zope.deferredimport==5.0
-zope.deprecation==5.0
-zope.event==5.0
-zope.hookable==6.0
-zope.interface==6.2
-zope.lifecycleevent==5.0
-zope.proxy==5.2
+Django==4.2.4 
+djangorestframework==3.14.0
+gunicorn==20.1.0  
+psycopg2-binary==2.9.7  
+dlib==19.24.1 
+opencv-python==4.8.0.76 
+numpy==1.25.2  
+requests==2.31.0 
+Pillow==10.0.0  
+matplotlib==3.7.2  
+tensorflow==2.15.0  
